add substantia nigra (SN) to glossary

--- a/code/glossary.tex
+++ b/code/glossary.tex
@@ -103,6 +103,7 @@ first={Post Traumatic Stress Disorder (PTSD)}
 \newacronym{s}{s}{seconds}
 \newacronym{SI}{SI}{supplementary information}
 \newacronym{SEM}{SEM}{standard error of the mean}
+\newacronym{SN}{SN}{substantia nigra}
 \newacronym{SNR}{SNR}{signal-to-noise ratio}
 \newacronym{SOA}{SOA}{stimulus onset asynchrony}
 \newacronym{SR}{SR}{successor representation}
