replace & with \& for neuroscience & biobehavioral reviews publications

--- a/code/bibliography.bib
+++ b/code/bibliography.bib
@@ -3628,10 +3628,10 @@ Offline replay of hippocampal neural patterns supports the acquisition of new ta
 	abstract = {Machine learning has enhanced the abilities of neuroscientists to interpret information collected through EEG, fMRI, and MEG data. With these powerful techniques comes the danger of overfitting of hyperparameters which can render results invalid. We refer to this problem as `overhyping' and show that it is pernicious despite commonly used precautions. Overhyping occurs when analysis decisions are made after observing analysis outcomes and can produce results that are partially or even completely spurious. It is commonly assumed that cross-validation is an effective protection against overfitting or overhyping, but this is not actually true. In this article, we show that spurious results can be obtained on random data by modifying hyperparameters in seemingly innocuous ways, despite the use of cross-validation. We recommend a number of techniques for limiting overhyping, such as lock boxes, blind analyses, pre-registrations, and nested cross-validation. These techniques, are common in other fields that use machine learning, including computer science and physics. Adopting similar safeguards is critical for ensuring the robustness of machine-learning techniques in the neurosciences.},
 	author = {Hosseini, Mahan and Powell, Michael and Collins, John and Callahan-Flintoft, Chloe and Jones, William and Bowman, Howard and Wyble, Brad},
 	date-added = {2020-12-14 09:36:59 +0100},
-	date-modified = {2020-12-14 09:37:41 +0100},
+	date-modified = {2021-01-15 19:31:28 +0100},
 	doi = {https://doi.org/10.1016/j.neubiorev.2020.09.036},
 	issn = {0149-7634},
-	journal = {Neuroscience & Biobehavioral Reviews},
+	journal = {Neuroscience {\&} Biobehavioral Reviews},
 	keywords = {Overfitting, Overhyping, Machine learning, Classification, Analysis, EEG},
 	pages = {456 - 467},
 	title = {I tried a bunch of things: The dangers of unexpected overfitting in classification of brain data},
@@ -14770,10 +14770,10 @@ Only recently have we come to realize that the putative systemic division of lab
 	abstract = {For the past two decades, it has generally been accepted that sleep benefits motor memory consolidation processes. This notion, however, has been challenged by recent studies and thus the sleep and motor memory story is equivocal. Currently, and in contrast to the declarative memory domain, a comprehensive overview and synthesis of the effects of post-learning sleep on the behavioral and neural correlates of motor memory consolidation is not available. We therefore provide an extensive review of the literature in order to highlight that sleep-dependent motor memory consolidation depends upon multiple boundary conditions, including particular features of the motor task, the recruitment of relevant neural substrates (and the hippocampus in particular), as well as the specific architecture of the intervening sleep period (specifically, sleep spindle and slow wave activity). For our field to continue to advance, future research must consider the multifaceted nature of sleep-related motor memory consolidation.},
 	author = {King, Bradley R. and Hoedlmoser, Kerstin and Hirschauer, Franziska and Dolfen, Nina and Albouy, Genevieve},
 	date-added = {2020-01-06 10:09:32 +0100},
-	date-modified = {2020-03-31 14:28:13 +0200},
+	date-modified = {2021-01-15 19:31:32 +0100},
 	doi = {10.1016/j.neubiorev.2017.04.026},
 	issn = {0149-7634},
-	journal = {Neuroscience & Biobehavioral Reviews},
+	journal = {Neuroscience {\&} Biobehavioral Reviews},
 	month = {Sep},
 	pages = {1--22},
 	publisher = {Elsevier BV},
@@ -17250,10 +17250,10 @@ slow rhythm, effectively triggered hippocampal discharges related to fast (rippl
 	abstract = {The orbitofrontal cortex (OFC) has been proposed to function as a cognitive map of task space: a mental model of the steps involved in a task. This idea has proven popular because it provides a cohesive explanation for a number of disparate findings regarding the OFC's role in a broad array of tasks. Concurrently, evidence has begun to reveal the functional heterogeneity of OFC subregions, particularly the medial and lateral OFC. How these subregions uniquely contribute to the OFC's role as a cognitive map of task space, however, has not been explored. Here we propose that, in rodents, the lateral OFC represents the agent's initial position within that task map (i.e. initial state), determining which actions are available as a consequence of that position, whereas the medial OFC represents the agent's future position within the task map (i.e. terminal state), influencing which actions are selected to achieve that position. We argue that these processes are achieved somewhat independently and somewhat interdependently, and are achieved through similar but non-identical circuitry.},
 	author = {Bradfield, Laura A. and Hart, Genevra},
 	date-added = {2019-11-29 09:39:38 +0100},
-	date-modified = {2020-03-31 14:28:12 +0200},
+	date-modified = {2021-01-15 19:31:18 +0100},
 	doi = {10.1016/j.neubiorev.2019.11.009},
 	issn = {0149-7634},
-	journal = {Neuroscience & Biobehavioral Reviews},
+	journal = {Neuroscience {\&} Biobehavioral Reviews},
 	keywords = {Medial orbitofrontal cortex; Lateral orbitofrontal cortex; Decision-making; Cognitive map of task space; Goal-directed action; Model-based reinforcement learning},
 	month = {Jan},
 	pages = {287--294},
@@ -17268,10 +17268,10 @@ slow rhythm, effectively triggered hippocampal discharges related to fast (rippl
 	abstract = {Memory formation is a highly dynamic process. In this review we discuss traditional views of memory and offer some ideas about the nature of memory formation and transformation. We argue that memory traces are transformed over time in a number of ways, but that understanding these transformations requires careful analysis of the various representations and linkages that result from an experience. These transformations can involve: (1) the selective strengthening of only some, but not all, traces as a function of synaptic rescaling, or some other process that can result in selective survival of some traces; (2) the integration (or assimilation) of new information into existing knowledge stores; (3) the establishment of new linkages within existing knowledge stores; and (4) the up-dating of an existing episodic memory. We relate these ideas to our own work on reconsolidation to provide some grounding to our speculations that we hope will spark some new thinking in an area that is in need of transformation.},
 	author = {Nadel, L. and Hupbach, A. and Gomez, R. and Newman-Smith, K.},
 	date-added = {2019-11-29 09:32:25 +0100},
-	date-modified = {2020-03-31 14:28:13 +0200},
+	date-modified = {2021-01-15 19:31:40 +0100},
 	doi = {10.1016/j.neubiorev.2012.03.001},
 	issn = {0149-7634},
-	journal = {Neuroscience & Biobehavioral Reviews},
+	journal = {Neuroscience {\&} Biobehavioral Reviews},
 	month = {Aug},
 	number = {7},
 	pages = {1640--1645},
