add reward prediction error to glossary

--- a/code/glossary.tex
+++ b/code/glossary.tex
@@ -98,6 +98,7 @@ first={Post Traumatic Stress Disorder (PTSD)}
   firstplural={\glsentrydescplural{ROI} (\glsentryplural{ROI})}
 }
 \newacronym{RL}{RL}{reinforcement learning}
+\newacronym{RPE}{RPE}{reward prediction error}
 \newacronym{RS}{RS}{repetition suppression}
 \newacronym{RSA}{RSA}{representational similarity analysis}
 \newacronym{s}{s}{seconds}
