add LTP (long-term potentiation) to glossary

--- a/code/glossary.tex
+++ b/code/glossary.tex
@@ -62,6 +62,7 @@
 \newacronym{ITI}{ITI}{inter-trial interval}
 \newacronym{LFP}{LFP}{local field potential}
 \newacronym{LME}{LME}{linear mixed effects}
+\newacronym{LTP}{LTP}{long-term potentiation}
 \newacronym{MB}{MB}{multi-band}
 \newacronym{MDP}{MDP}{Markov decision process}
 \newacronym{MEG}{MEG}{magnetoencephalography}
