update PTSD to lower caps

--- a/code/glossary.tex
+++ b/code/glossary.tex
@@ -86,7 +86,7 @@
 \newglossaryentry{PTSD}{
 name={PTSD},
 description={Post-traumatic stress disorder (PTSD) is a mental disorder that can develop after a person is exposed to a traumatic event, such as sexual assault, and can include a variety of symptoms like disturbing thoughts, feelings, and re-experiencing trauma-related events},
-first={Post Traumatic Stress Disorder (PTSD)}
+first={post traumatic stress disorder (PTSD)}
 }
 \newacronym{REM}{REM}{rapid eye movement}
 \newglossaryentry{ROI}
