--- a/code/glossary.tex
+++ b/code/glossary.tex
@@ -110,6 +110,7 @@ first={post traumatic stress disorder (PTSD)}
 \newacronym{SOA}{SOA}{stimulus onset asynchrony}
 \newacronym{SR}{SR}{successor representation}
 \newacronym{S-R}{S-R}{stimulus-response}
+\newacronym{STDP}{STDP}{spike timing dependent plasticity}
 \newacronym{SWR}{SWR}{sharp wave-ripple}
 \newacronym{T1w}{T1w}{T1-weighted}
 \newacronym{TD}{TD}{temporal difference}
