--- a/code/glossary.tex
+++ b/code/glossary.tex
@@ -116,6 +116,7 @@ first={post traumatic stress disorder (PTSD)}
 \newacronym{TD}{TD}{temporal difference}
 \newacronym{TE}{TE}{echo time}
 \newacronym{TI}{TI}{inversion time}
+\newacronym{TMR}{TMR}{targeted memory reactivation}
 \newacronym{TR}{TR}{repetition time}
 \newacronym{VTA}{VTA}{ventral tegmental area}
 \newacronym{VTE}{VTE}{vicarious trial and error}
