--- a/code/bibliography.Rmd
+++ b/code/bibliography.Rmd
@@ -38,7 +38,10 @@ bib <- data.table::fread(path_bib) %>%
   # turn URLs into hyperlinks that open in a new tap:
   .[, url := paste0("<a href='", url , "' target='_blank'>URL</a>")] %>%
   # remove curly brackets from the title:
-  .[, title := gsub("[{}]", "", title)]
+  .[, title := gsub("[{}]", "", title)] %>%
+  # convert dates when references were added:
+  .[, ":="(date_added_converted = as.Date(
+  get("date-added"), format = "%Y-%m-%d %H:%M:%S %z"))]
 bib_all = bib %>%
   # select columns:
   .[,c("ID", "title", "author", "year", "journal", "url")]
@@ -49,6 +52,7 @@ bib_all = bib %>%
 Welcome! This website show the entire bibliography maintained by Lennart Wittkuhn.
 
 At the moment, this bibliography contains `r nrow(bib)` references for publications in neuroscience, psychology, statistics, artificial intelligence, meta-science and more.
+The last reference was added on `r as.Date(max(bib$date_added_converted), format = "%Y-%m-%d %H:%M:%S %z")`.
 
 The source code of this website can be found at <https://github.com/lnnrtwttkhn/bibliography/>.
 
@@ -125,8 +129,6 @@ DT::datatable(
 
 ```{r}
 bib_time = bib %>%
-  .[, ":="(date_added_converted = as.Date(
-  get("date-added"), format = "%Y-%m-%d %H:%M:%S %z"))] %>%
   setorder(date_added_converted) %>%
   .[, by = .(date_added_converted), .(num_added = .N)] %>%
   verify(.[, .(N = .(sum(num_added)))]$N == nrow(bib))
