add artificial neural network (ANN) to glossary

--- a/code/glossary.tex
+++ b/code/glossary.tex
@@ -1,5 +1,6 @@
 \newacronym{AI}{AI}{artificial intelligence}
 \newacronym{ANTs}{ANTs}{Advanced Normalization Tools}
+\newacronym{ANN}{ANN}{artificial neural network}
 \newacronym{ANOVA}{ANOVA}{analysis of variance}
 \newacronym{A-P}{A-P}{anterior-to-posterior}
 \newacronym{BET}{BET}{Brain Extraction Tool}
