add stoachastic gradient descent (SGD) to glossary

--- a/code/glossary.tex
+++ b/code/glossary.tex
@@ -106,6 +106,7 @@ first={post traumatic stress disorder (PTSD)}
 \newacronym{s}{s}{seconds}
 \newacronym{SI}{SI}{supplementary information}
 \newacronym{SEM}{SEM}{standard error of the mean}
+\newacronym{SGD}{SGD}{stochastic gradient descent}
 \newacronym{SN}{SN}{substantia nigra}
 \newacronym{SNR}{SNR}{signal-to-noise ratio}
 \newacronym{SOA}{SOA}{stimulus onset asynchrony}
