add Kullback-Leibler (KL) to glossary

--- a/code/glossary.tex
+++ b/code/glossary.tex
@@ -61,6 +61,7 @@
 \newacronym{ISI}{ISI}{inter-stimulus interval}
 \newacronym{IT}{IT}{information technology}
 \newacronym{ITI}{ITI}{inter-trial interval}
+\newacronym{KL}{KL}{Kullback-Leibler}
 \newacronym{LFP}{LFP}{local field potential}
 \newacronym{LME}{LME}{linear mixed effects}
 \newacronym{LTP}{LTP}{long-term potentiation}
