update Wikenheiser, Andrew M. author naming

--- a/code/bibliography.bib
+++ b/code/bibliography.bib
@@ -1,7 +1,7 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Wittkuhn, Lennart at 2021-02-12 11:34:49 +0100 
+%% Created for Wittkuhn, Lennart at 2021-02-12 12:40:04 +0100 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
@@ -7045,10 +7045,10 @@ The Brain from Inside Out explains why our brain is not an information-absorbing
 
 @article{Wikenheiser2015NN,
 	abstract = {Hippocampal information processing is discretized by oscillations, and the ensemble activity of place cells is organized into temporal sequences bounded by theta cycles. Theta sequences represent time-compressed trajectories through space. Their forward-directed nature makes them an intuitive candidate mechanism for planning future trajectories, but their connection to goal-directed behavior remains unclear. As rats performed a value-guided decision-making task, the extent to which theta sequences projected ahead of the animal's current location varied on a moment-by-moment basis depending on the rat's goals. Look-ahead extended farther on journeys to distant goals than on journeys to more proximal goals and was predictive of the animal's destination. On arrival at goals, however, look-ahead was similar regardless of where the animal began its journey from. Together, these results provide evidence that hippocampal theta sequences contain information related to goals or intentions, pointing toward a potential spatial basis for planning.},
-	author = {Wikenheiser, Andrew M and Redish, A David},
+	author = {Wikenheiser, Andrew M. and Redish, A David},
 	da = {2015/02/01},
 	date-added = {2020-12-18 14:45:32 +0100},
-	date-modified = {2020-12-18 14:46:02 +0100},
+	date-modified = {2021-02-12 12:39:52 +0100},
 	doi = {10.1038/nn.3909},
 	id = {Wikenheiser2015},
 	isbn = {1546-1726},
@@ -7186,10 +7186,10 @@ The Brain from Inside Out explains why our brain is not an information-absorbing
 @article{Wikenheiser2017N,
 	abstract = {The hippocampus and orbitofrontal cortex (OFC) both make important contributions to decision making and other cognitive processes. However, despite anatomical links between the two, few studies have tested the importance of hippocampal--OFC interactions. Here, we recorded OFC neurons in rats performing a decision making task while suppressing activity in a key hippocampal output region, the ventral subiculum. OFC neurons encoded information about expected outcomes and rats' responses. With hippocampal output suppressed, rats were slower to adapt to changes in reward contingency, and OFC encoding of response information was strongly attenuated. In addition, ventral subiculum inactivation prevented OFC neurons from integrating information about features of outcomes to form holistic representations of the outcomes available in specific trial blocks. These data suggest that the hippocampus contributes to OFC encoding of both concrete, low-level features of expected outcomes, and abstract, inferred properties of the structure of the world, such as task state. {\copyright} 2017},
 	affiliation = {NIDA Intramural Research Program, Cellular Neurobiology Research Branch, Behavioral Neurophysiology Research Section, Baltimore, MD 21224, United States; Department of Anatomy and Neurobiology, University of Maryland, School of Medicine, Baltimore, MD 21201, United States; Solomon H. Snyder Department of Neuroscience, The Johns Hopkins University, Baltimore, MD 21287, United States},
-	author = {Wikenheiser, A.M. and Marrero-Garcia, Y. and Schoenbaum, G.},
+	author = {Wikenheiser, Andrew M. and Marrero-Garcia, Y. and Schoenbaum, G.},
 	author_keywords = {decision making; decoding; electrophysiology; hippocampus; orbitofrontal},
 	date-added = {2020-12-18 13:38:17 +0100},
-	date-modified = {2021-02-11 15:21:58 +0100},
+	date-modified = {2021-02-12 12:39:46 +0100},
 	document_type = {Article},
 	doi = {10.1016/j.neuron.2017.08.003},
 	journal = {Neuron},
