change to Johnson, Adam

--- a/code/bibliography.bib
+++ b/code/bibliography.bib
@@ -1,7 +1,7 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Wittkuhn, Lennart at 2021-02-12 12:40:04 +0100 
+%% Created for Wittkuhn, Lennart at 2021-02-12 13:02:16 +0100 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
@@ -20618,9 +20618,9 @@ slow rhythm, effectively triggered hippocampal discharges related to fast (rippl
 
 @article{Johnson2007JN,
 	abstract = {Neural ensembles were recorded from the CA3 region of rats running on T-based decision tasks. Examination of neural representations of space at fast time scales revealed a transient but repeatable phenomenon as rats made a decision: the location reconstructed from the neural ensemble swept forward, first down one path and then the other. Estimated representations were coherent and preferentially swept ahead of the animal rather than behind the animal, implying it represented future possibilities rather than recently traveled paths. Similar phenomena occurred at other important decisions (such as in recovery from an error). Local field potentials from these sites contained pronounced theta and gamma frequencies, but no sharp wave frequencies. Forward-shifted spatial representations were influenced by task demands and experience. These data suggest that the hippocampus does not represent space as a passive computation, but rather that hippocampal spatial processing is an active process likely regulated by cognitive mechanisms.},
-	author = {Johnson, A. and Redish, A. D.},
+	author = {Johnson, Adam and Redish, A. D.},
 	date-added = {2019-12-19 13:02:00 +0100},
-	date-modified = {2020-03-31 14:28:13 +0200},
+	date-modified = {2021-02-12 13:01:26 +0100},
 	doi = {10.1523/jneurosci.3761-07.2007},
 	issn = {1529-2401},
 	journal = {Journal of Neuroscience},
